--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "15.3.3",
+    "ogl": "^1.0.11",
     "openai": "^5.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
